fourthTier: DFG::ByteCodeParser doesn't need ExecState* https://bugs.webkit.org/show_bug.cgi?id=115582

Reviewed by Geoffrey Garen.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::ByteCodeParser):
(ByteCodeParser):
(JSC::DFG::parse):
* dfg/DFGByteCodeParser.h:
(DFG):
* dfg/DFGDriver.cpp:
(JSC::DFG::compile):

Canonical link: https://commits.webkit.org/136928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153144 268f45cc-cd09-0410-ab3c-d52691b4dbfc